--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "aex"
-version = "1.1.0"
+version = "1.2.0"
 description = "AEX - AI Execution Kernel"
 readme = "README.md"
 requires-python = ">=3.11"
 license = "MIT"
 authors = [
-  { name = "Auro Rium", email = "you@example.com" }
+  { name = "Auro Rium", email = "auroriumnexus@gmail.com" }
 ]
 
 dependencies = [
@@ -20,6 +20,9 @@ dependencies = [
     "python-dotenv>=1.0",
     "pyyaml>=6.0",
 ]
+
+[project.optional-dependencies]
+openai = ["openai>=1.0"]
 
 [project.scripts]
 aex = "aex.cli:app"
