--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "aex"
-version = "1.2.0"
-description = "AEX — AI Execution Kernel. Local-first governance layer for AI agents with budget enforcement, rate limiting, capability policies, and audit trails."
+version = "1.2.1"
+description = "AEX — Auto Execution Kernel. Local-first governance layer for AI agents with budget enforcement, rate limiting, capability policies, and audit trails."
 readme = "README.md"
 requires-python = ">=3.11"
 license = "MIT"
@@ -54,9 +54,6 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
-[tool.setuptools.package-data]
-"aex.daemon.frontend" = ["*.html"]
 
 [tool.pytest.ini_options]
 markers = [
