--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "aex"
-version = "2.0.0"
-description = "AEX v2.0 — local-first AI execution governance kernel with deterministic accounting, idempotent admission, and tamper-evident ledger replay."
+version = "2.1.0"
+description = "AEX v2.1 — multi-tenant AI execution governance kernel with deterministic admission, exactly-once settlement, and auditable hash-chain replay."
 readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "Apache-2.0" }
@@ -27,6 +27,7 @@ dependencies = [
     "uvicorn>=0.29",
     "httpx>=0.27",
     "pydantic>=2.6",
+    "psycopg[binary]>=3.2",
     "typer>=0.9",
     "rich>=13.7",
     "psutil>=5.9",
@@ -55,3 +56,6 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"aex.daemon.frontend" = ["*.html"]
