--- a/deploy/vercel/vercel.json
+++ b/deploy/vercel/vercel.json
@@ -4,7 +4,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "https://aex-kernel.fly.dev/$1"
+      "dest": "https://YOUR_BACKEND_DOMAIN/$1"
     }
   ]
 }
