--- a/deploy/railway/.env.example
+++ b/deploy/railway/.env.example
@@ -1,43 +1,57 @@
-# Shared
-AEX_ENV=production
-AEX_LOG_LEVEL=INFO
-AEX_OTEL_ENABLED=1
-AEX_METRICS_ENABLED=1
-AEX_METRICS_PATH=/metrics
+# =============================================================
+# AEX v2.1 — Railway + Neon Production Environment Variables
+# Set these as Railway service variables in the dashboard.
+# =============================================================
 
-# Neon
+# --- Required: PostgreSQL (Neon) ---
+# Format: postgresql://<user>:<password>@<neon-host>/<db>?sslmode=require
 AEX_PG_DSN=postgresql://<user>:<password>@<neon-host>/<db>?sslmode=require
-AEX_DB_POOL_MIN=5
-AEX_DB_POOL_MAX=50
+
+# --- Required: Admin control key (for /admin/control/* endpoints) ---
+AEX_ADMIN_CONTROL_KEY=<strong-random-secret>
+
+# --- Required: Model config dir (models.yaml is bundled in Docker image) ---
+AEX_CONFIG_DIR=/etc/aex/config
+
+# --- Startup behaviour ---
+AEX_STARTUP_STRICT=1                  # Fail fast if DB/config unavailable
+AEX_LOG_LEVEL=INFO                    # DEBUG | INFO | WARNING | ERROR
+
+# --- Database tuning (optional, these are the defaults) ---
 AEX_DB_CONNECT_TIMEOUT_SECONDS=5
 AEX_DB_STATEMENT_TIMEOUT_MS=20000
 AEX_DB_LOCK_TIMEOUT_MS=5000
-
-# Redis
-AEX_REDIS_URL=redis://default:<password>@<redis-host>:6379
-AEX_REDIS_RATE_LIMIT_PREFIX=aex:ratelimit
-AEX_REDIS_LOCK_PREFIX=aex:lock
-
-# API/Admission
-AEX_API_AUTH_REQUIRED=1
-AEX_DEFAULT_FAIL_OPEN=0
 AEX_SERIALIZABLE_RETRY_MAX=5
+
+# --- Optional: Redis (rate limiting + short-lived locks) ---
+# If not set, AEX falls back to PostgreSQL-based rate limiting.
+AEX_REDIS_URL=redis://default:<password>@<redis-host>:6379
+
+# --- Optional: LLM Provider keys (forwarded to upstream providers) ---
+OPENAI_API_KEY=sk-...
+GROQ_API_KEY=gsk_...
+
+# --- Optional: Admitted request tuning ---
 AEX_ADMISSION_TIMEOUT_MS=2500
 AEX_PROVIDER_TIMEOUT_MS=30000
 AEX_WEBHOOK_TIMEOUT_MS=5000
 
-# Worker
-AEX_WORKER_POLL_INTERVAL_MS=250
-AEX_WORKER_BATCH_SIZE=100
-AEX_WORKER_LEASE_SECONDS=30
-AEX_WORKER_MAX_ATTEMPTS=20
+# --- Optional: Recovery sweep interval ---
+AEX_RECOVERY_SWEEP_SECONDS=15
 
-# Admin
-AEX_ADMIN_REQUIRE_MTLS=0
-AEX_ADMIN_JWT_ISSUER=https://auth.example.com
-AEX_ADMIN_JWT_AUDIENCE=aex-admin
+# --- Optional: CORS / host restrictions ---
+# Comma-separated. Leave unset to allow all origins (development mode).
+# AEX_CORS_ORIGINS=https://your-dashboard.example.com
+# AEX_ALLOWED_HOSTS=your-app.railway.app,your-custom-domain.com
 
-# SDK defaults
+# --- Optional: Alert thresholds ---
+AEX_ALERT_STALE_RESERVATIONS=20
+AEX_ALERT_NON_TERMINAL_EXECUTIONS=50
+AEX_ALERT_DENIED_RATIO=0.50
+AEX_ALERT_PROVIDER_429=30
+AEX_ALERT_WINDOW_MINUTES=10
+
+# --- SDK defaults (for agents calling AEX via SDK) ---
 AEX_ENABLE=1
 AEX_MODE=proxy
-AEX_BASE_URL=https://aex-cloud.app
+AEX_BASE_URL=https://<your-app>.railway.app
